--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
   </div> -->
 
   <ul class="navigation list-inline text-center">
-    <li><a href="">About</a></li>
-    <li><a href="">Skills</a></li>
-    <li><a href="">Education</a></li>
+    <li><a href="#about-me">About</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#education">Education</a></li>
     <li><a href="">Projects</a></li>
-    <li><a href="https://github.com/ctreweek">Github</a></li>
+    <li><a href="https://github.com/ctreweek" target="blank">Github</a></li>
+    <li><a href="https://www.linkedin.com/in/ctreweek" target="blank">Linked In</a></li>
   </ul>
 
   <div class="container-fluid">
     <div class="card">
-      <div class="card-about me">
+      <div id="about-me">
        <h4><u>My Story</u></h4>
        <p>Over the course of the past few months, I have changed my focus from linguistcs and Middle Eastern Studies to full-stack web development. What began as an exploration of coding in my free time quickly developed into a complete fascination with computer programming, as my passion for studying and analyzing language translated directly into an obessession with Ruby.</p>
        <p>As a developer, I truly enjoy the process of envisioning a project as a whole and breaking it down into small, manageable pieces in order to achive my vision. </p>
@@ -41,16 +42,20 @@
    </div>
 
      <div class="card">
-      <div class="card-skills">
+      <div id="skills">
        <h4><u>Skills</u></h4>
        <p>Languages: Ruby, Javascript, HTML5, CSS/SCSS</p>
        <p>Frameworks: Rails</p>
+       <p>Libraries: jQuery/AJAX, Bootstrap</p>
+       <p>Databases: Postgre SQL, ActiveRecord</p>
+       <p>Version Control/Work Flow: Git/Github</p>
+       <p>Design: Sketch, Marvel</p>
      </div>
    </div>
 
 
    <div class= "card">
-     <div class="education">
+     <div id="education">
        <h4><u>Education</u></h4>
        <div class="ed-linespace-1">
          <h5>LE WAGON</h5>
