Search recommendation for getinked

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="text-center">
   <a href="http://www.getinked.co/" >www.getinked.co</a>
   </div>
-  <p>*As we are still in the process of making the app responsive, it is best experienced when inspected and viewed in iPhone 6 plus format. Moreover, as a result of Instagram API restrictions, it is not possible at this time to sign up with an Instagram account that has not been authorized in the development process.</p>
+  <p>*As we are still in the process of making the app responsive, it is best experienced when inspected and viewed in iPhone 6 plus format. While it is possible to search for multiple city/style combinations, not every city has a style seeded for it at this point. I therefore recommend searching "Barcelona/Traditional" in order to most efficiently go through the user journey!</p>
  </div>
 </div>
 
