--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="card">
       <div id="about-me">
        <h4><u>My Story</u></h4>
-       <p>Over the course of the past few months, I have changed my focus from linguistcs and Middle Eastern Studies to full-stack web development. What began as an exploration of coding in my free time quickly developed into a complete fascination with computer programming, as my passion for studying and analyzing language translated directly into an obessession with Ruby.</p>
+       <p>Over the course of the past few months, I have changed my focus from linguistics and Middle Eastern Studies to full-stack web development. What began as an exploration of coding in my free time quickly developed into a complete fascination with computer programming, as my passion for studying and analyzing language translated directly into an obessession with Ruby.</p>
        <p>As a developer, I truly enjoy the process of envisioning a project as a whole and breaking it down into small, manageable pieces in order to achive my vision. Given my background as a language enthusiast with experience translating large texts, I understand the importance of approaching a task one step at a time as a means of reaching a larger goal.</p>
        <p>From my time as a competitive athelete and coach, I embrace teamwork and collaboration and take pride in my ability to communicate effectively with others. Moreover, as someone who has lived and traveled in cultures vastly different from my own, I appreciate diversity in opinion and perspective and strive to incoroporate these ideals into my work as a developer.</p>
      </div>
