--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    <h5>get.inked</h5>
    <p>get.inked is a team-built, fullstack, 11-model Ruby on Rails app using HTML, CSS/SCSS, Javascript, jQuery, Bootstrap, OmniAuth, Instagram API, and Action Cable. Deployed via Heroku.</p>
    <p>It is a mobile-first application that acts as a platform for tattoo artists to share their work by signing up with Instagram and selecting which photos they would like to add to their profile, as well as setting their availability. On the other side of the coin, get.inked allows for tattoo seekers to browse both work and artists based on location and style, book an appointment, message with the artist, pay a deposit once the appointment has been confirmed, and review their artist.</p>
-   <p>One of the biggest challenges during this project was working with the Instagram API. We encountered a lot of difficulty with the access token and allowing multiple users to sign in with Instagram. Given that it is an 11-model app, developing the schema and establishing associations was also a challenging part of the process. We often found ourselves migrating to add or remove columns from tables as we went along. </p>
+   <p>One of the biggest challenges during this project was working with the Instagram API. We encountered a lot of difficulty with the access token and allowing multiple users to sign in with Instagram.</p>
    <div class="text-center">
     <img src="images/code_snippet1.jpeg" class="code-snippet" alt="">
    </div>
