Add NOBODY to project section

--- a/index.html
+++ b/index.html
@@ -53,21 +53,33 @@
  <div class="card">
   <div id="projects">
    <h4><u>Projects</u></h4>
-   <h5>get.inked</h5>
-   <p>get.inked is a team-built, fullstack, 11-model Ruby on Rails app using HTML, CSS/SCSS, Javascript, jQuery, Bootstrap, OmniAuth, Instagram API, and Action Cable. Deployed via Heroku.</p>
-   <p>It is a mobile-first application that acts as a platform for tattoo artists to share their work by signing up with Instagram and selecting which photos they would like to add to their profile, as well as setting their availability. On the other side of the coin, get.inked allows for tattoo seekers to browse both work and artists based on location and style, book an appointment, message with the artist, pay a deposit once the appointment has been confirmed, and review their artist.</p>
-   <p>One of the biggest challenges during this project was working with the Instagram API. We encountered a lot of difficulty with the access token and allowing multiple users to sign in with Instagram.</p>
-   <div class="text-center">
-    <img src="images/code_snippet1.jpeg" class="code-snippet" alt="">
-   </div>
-  <div class="text-center">
-    <img src="images/code_snippet2.jpeg" class="code-snippet2" alt="">
+   <div class="projects-getinked">
+     <h5>get.inked</h5>
+     <p>get.inked is a team-built, fullstack, 11-model Ruby on Rails app using HTML, CSS/SCSS, Javascript, jQuery, Bootstrap, OmniAuth, Instagram API, and Action Cable. Deployed via Heroku.</p>
+     <p>It is a mobile-first application that acts as a platform for tattoo artists to share their work by signing up with Instagram and selecting which photos they would like to add to their profile, as well as setting their availability. On the other side of the coin, get.inked allows for tattoo seekers to browse both work and artists based on location and style, book an appointment, message with the artist, pay a deposit once the appointment has been confirmed, and review their artist.</p>
+     <p>One of the biggest challenges during this project was working with the Instagram API. We encountered a lot of difficulty with the access token and allowing multiple users to sign in with Instagram.</p>
+     <div class="text-center">
+      <img src="images/code_snippet1.jpeg" class="code-snippet" alt="">
+    </div>
+    <div class="text-center">
+      <img src="images/code_snippet2.jpeg" class="code-snippet2" alt="">
+    </div>
+    <div class="text-center">
+      <a href="http://www.getinked.co/" >www.getinked.co</a>
+    </div>
+    <p>*As we are still in the process of making the app responsive, it is best experienced when inspected and viewed in iPhone 6 plus format. While it is possible to search for multiple city/style combinations, not every city has a style seeded for it at this point. I therefore recommend searching "Barcelona/Traditional" in order to most efficiently go through the user journey!</p>
   </div>
-  <div class="text-center">
-  <a href="http://www.getinked.co/" >www.getinked.co</a>
+  <div class="projects-nobody">
+    <h5>NOBODY</h5>
+    <p>NOBODY is a new business designed to stimulate culture and community through a new form of event coordination. The company will host events within the local area. Each event will be driven by a specific theme. The theme, time, and location of each event will be sent as a notification through the app less than a day before to give people a fun incentive to try to attend, with proceeds going to a local or national charity. </p>
+
+    <p>The app, which is still in the development stages, is a simple 4-model Ruby on Rails application using HTML, CSS/SCSS, Javascript, jQuery, Bootstrap, and OmniAuth which allows users who have created an account to receive notifications 24 hours before a party is hosted. Users have the ability to RSVP to an event, view the guest list, and view photos from past events.</p>
+    <div class="text-center">
+      <img src="images/nobody_code.png" class="code-snippet" alt="">
+    </div>
+
   </div>
-  <p>*As we are still in the process of making the app responsive, it is best experienced when inspected and viewed in iPhone 6 plus format. While it is possible to search for multiple city/style combinations, not every city has a style seeded for it at this point. I therefore recommend searching "Barcelona/Traditional" in order to most efficiently go through the user journey!</p>
- </div>
+</div>
 </div>
 
 <div class= "card">
